Changes by Tal